[gd_scene load_steps=16 format=3 uid="uid://cfueo8bq1m5sc"]

[ext_resource type="Texture2D" uid="uid://7vlk2316cafj" path="res://Main/UI/UI_Border.png" id="1_hliqh"]
[ext_resource type="Texture2D" uid="uid://dfk84f81tec5a" path="res://Main/UI/UI_Briefmarke.png" id="2_ai7ek"]
[ext_resource type="Script" path="res://Main/UI/tile_selection_buttons.gd" id="2_tfr2o"]
[ext_resource type="Texture2D" uid="uid://dxgg7gbwcx1t8" path="res://Main/UI/Buttons/UI_Button_002.png" id="3_rlhv1"]
[ext_resource type="Texture2D" uid="uid://cya3ipeeldy8p" path="res://Main/UI/Buttons/UI_Button_002_Pressed.png" id="4_pe5qq"]
[ext_resource type="BitMap" uid="uid://0o178jd3m3g7" path="res://Main/UI/Buttons/UI_Button_002_Bitmap.png" id="5_qnmkw"]
[ext_resource type="Texture2D" uid="uid://doi5x427notnu" path="res://Main/UI/Buttons/UI_Button_001.png" id="6_xtept"]
[ext_resource type="Texture2D" uid="uid://drivsywj573qn" path="res://Main/UI/Buttons/UI_Button_001_Pressed.png" id="7_1pwxo"]
[ext_resource type="BitMap" uid="uid://ddc8q7c6glfbn" path="res://Main/UI/Buttons/UI_Button_001_Bitmap.png" id="8_orjtp"]
[ext_resource type="Texture2D" uid="uid://dueyghs3mwpx2" path="res://Main/UI/Buttons/UI_Button_003.png" id="9_q221j"]
[ext_resource type="Texture2D" uid="uid://bodqprvnml251" path="res://Main/UI/Buttons/UI_Button_003_Pressed.png" id="10_qv0ql"]
[ext_resource type="BitMap" uid="uid://uk4lhpxhonm2" path="res://Main/UI/Buttons/UI_Button_003_Bitmap.png" id="11_mev2q"]
[ext_resource type="Texture2D" uid="uid://bx0ngij1haodo" path="res://Main/UI/Buttons/UI_Button_004.png" id="12_rj6vq"]
[ext_resource type="Texture2D" uid="uid://dtbh60s61nra1" path="res://Main/UI/Buttons/UI_Button_004_Pressed.png" id="13_tj6ga"]
[ext_resource type="BitMap" uid="uid://0d56j7dl3xj0" path="res://Main/UI/Buttons/UI_Button_004_Bitmap.png" id="14_43j2g"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 1.7778

[node name="TextureRect_Border" type="TextureRect" parent="CanvasLayer/AspectRatioContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.78
mouse_filter = 2
texture = ExtResource("1_hliqh")
expand_mode = 1
stretch_mode = 4

[node name="TileSelectionButtons" type="GridContainer" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border" groups=["Buttons"]]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0772569
anchor_top = 1.04167
anchor_right = 0.0772569
anchor_bottom = 1.04167
offset_top = -100.0
offset_right = 412.0
grow_vertical = 0
columns = 4
script = ExtResource("2_tfr2o")
metadata/_edit_use_anchors_ = true

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons"]
layout_mode = 2
mouse_filter = 2

[node name="TextureButton_2" type="TextureButton" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_rlhv1")
texture_pressed = ExtResource("3_rlhv1")
texture_hover = ExtResource("3_rlhv1")
texture_disabled = ExtResource("3_rlhv1")
texture_focused = ExtResource("4_pe5qq")
texture_click_mask = ExtResource("5_qnmkw")
ignore_texture_size = true
stretch_mode = 4

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureButton_1" type="TextureButton" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_xtept")
texture_pressed = ExtResource("6_xtept")
texture_hover = ExtResource("6_xtept")
texture_disabled = ExtResource("6_xtept")
texture_focused = ExtResource("7_1pwxo")
texture_click_mask = ExtResource("8_orjtp")
ignore_texture_size = true
stretch_mode = 4

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureButton_3" type="TextureButton" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer5"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("9_q221j")
texture_pressed = ExtResource("9_q221j")
texture_hover = ExtResource("9_q221j")
texture_disabled = ExtResource("9_q221j")
texture_focused = ExtResource("10_qv0ql")
texture_click_mask = ExtResource("11_mev2q")
ignore_texture_size = true
stretch_mode = 4

[node name="AspectRatioContainer6" type="AspectRatioContainer" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureButton_4" type="TextureButton" parent="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer6"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("12_rj6vq")
texture_pressed = ExtResource("12_rj6vq")
texture_hover = ExtResource("12_rj6vq")
texture_disabled = ExtResource("12_rj6vq")
texture_focused = ExtResource("13_tj6ga")
texture_click_mask = ExtResource("14_43j2g")
ignore_texture_size = true
stretch_mode = 4

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 1.7778

[node name="TextureRect_Stamp" type="TextureRect" parent="CanvasLayer/AspectRatioContainer2"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_ai7ek")
expand_mode = 1
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/AspectRatioContainer2/TextureRect_Stamp"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.908854
anchor_top = 0.249997
anchor_right = 0.908854
anchor_bottom = 0.249997
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
text = "1543"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer4/TextureButton_2" to="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons" method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer3/TextureButton_1" to="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons" method="_on_texture_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer5/TextureButton_3" to="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons" method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons/AspectRatioContainer6/TextureButton_4" to="CanvasLayer/AspectRatioContainer/TextureRect_Border/TileSelectionButtons" method="_on_texture_button_4_pressed"]
